# Everybody-A-Hacker-IDE

./: #include <iostream>.cpp  CMakeLists.txt  auto_complete.hpp  bugs.md  changelog.md  cursor_clone.cpp  cursor_clone.hpp  exit  file_browser.cpp  groq_client  groq_client.cpp  groq_client.hpp  gui.cpp  main.cpp  pinecone_client.cpp  pinecone_client.hpp  readme.md  terminal.cpp  text_editor.cpp  text_editor.hpp  utils.cpp
